Changed footer info

--- a/views/auctions.html
+++ b/views/auctions.html
@@ -79,7 +79,9 @@
         </form>
     </div>
     <div class='footer'>
-        © 2011 <a href='http://mechanicles.com' title='http://mechanicles.com'>Santosh Wadghule</a>
+      © 2011 <a href='http://mechanicles.com' title='http://mechanicles.com'>Santosh Wadghule</a>
+      |
+      <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a>
     </div>
 </div>
 </body>
