--- a/views/auctions.html
+++ b/views/auctions.html
@@ -81,7 +81,7 @@
     <div class='footer'>
       © 2011 <a href='http://mechanicles.com' title='http://mechanicles.com'>Santosh Wadghule</a>
       |
-      <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a>
+      Powered by <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a>
     </div>
 </div>
 </body>
