--- a/views/auctions.html
+++ b/views/auctions.html
@@ -82,6 +82,8 @@
       © 2011 <a href='http://mechanicles.com' title='http://mechanicles.com'>Santosh Wadghule</a>
       |
       Powered by <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a>
+      |
+      Github <a href='https://github.com/mechanicles/auction_system', title='Source code'>Github</a>
     </div>
 </div>
 </body>
