--- a/views/auctions.html
+++ b/views/auctions.html
@@ -83,7 +83,7 @@
       |
       Powered by <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a>
       |
-      Github <a href='https://github.com/mechanicles/auction_system', title='Source code'>Github</a>
+      <a href='https://github.com/mechanicles/auction_system', title='Source code'>Github</a>
     </div>
 </div>
 </body>
