--- a/views/auctions.html
+++ b/views/auctions.html
@@ -81,7 +81,7 @@
     <div class='footer'>
       © 2011 <a href='http://mechanicles.com' title='http://mechanicles.com'>Santosh Wadghule</a>
       |
-      Powered by <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a>
+      Powered by <a href='http://expressjs.com' title='http://expressjs.com/'>Express.js</a> & <a href='http://nodester.com' title='http://nodester.com'>Nodester</a>
       |
       <a href='https://github.com/mechanicles/auction_system', title='Source code'>Github</a>
     </div>
